# how-mcp-works

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  streamlit_app.py
data/: corpus.txt  scenarios.json
docs/: 01-first-principles.md  02-model-architecture.md  03-training-and-inference.md
scripts/: __init__.py  _bootstrap.py  generate.py  prepare_data.py  train.py
src/how_mcp_works/: __init__.py  config.py  data.py  inference.py  model.py  tokenizer.py  trainer.py
tests/: test_model.py  test_tokenizer.py
